--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body{
     border-style: solid;
     border-color: var(--green1);
     background-color: black;
+    font-family: DEP;
     color: var(--green1);
     margin: 2px 2px 2px 2px;
     padding: 3px 5px 7px 12px;
