--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,20 @@ body{
 }
 
 .text-box{
-    border-width: 2px;
+    border-width: 4px;
     border-style: solid;
     border-color: var(--green1);
     background-color: black;
     font-family: DEP;
     color: var(--green1);
-    margin: 2px 2px 2px 2px;
-    padding: 3px 5px 7px 12px;
+    margin: 0px 0px 0px 0px;
+    padding: 15px 15px 15px 15px;
     font-size: 24px;
+}
+
+.text-box img{
+    width:100px;
+    height:100px;
+    margin: 0px 10px 0px 0px;
+    padding: 0px 0px 0px 0px;
 }
