--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,10 @@ body{
     color: var(--green1);
 }
 
+p{
+    background-color: var(--green2);
+}
+
 .text-box{
     border-width: 4px;
     border-style: solid;
