--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ p{
     background-color: black;
     font-family: DEP;
     color: var(--green1);
-    margin: 5px 50px 5px 50px;
+    margin: 5px 25% 5px 25%;
     padding: 15px 15px 15px 15px;
     font-size: 24px;
 }
