--- a/styles.css
+++ b/styles.css
@@ -48,17 +48,28 @@ p{
     font-family: DEP;
     color: var(--green1);
     margin: 5px 25% 5px 25%;
-    padding: 15px 15px 15px 15px;
+    padding: 0px 15px 15px 15px;
     font-size: 24px;
+    border-radius: 3px;
+}
+
+.alt-text-box{
+    border-width: 4px;
+    border-style: solid;
+    border-color: var(--green1);
+    background-color: black;
+    font-family: DEP;
+    color: var(--green1);
+    margin: 5px 33% 5px 0px;
+    padding: 5px 5px 5px 5px;
+    font-size: 24px;
+    border-radius: 3px;
 }
 
 .text-box img{
-    width:100px;
-    height:100px;
-    margin: 0px 10px 0px 0px;
+    width: 100px;
+    height: 100px;
+    margin: 10px 10px 10px 0px;
     padding: 0px 0px 0px 0px;
-}
-
-.text-box p{
-    background-color: var(--green2);
+    float: left;
 }
