--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body{
     background-color: black;
     font-family: DEP;
     color: var(--green1);
-    margin: 5px 25% 5px 25%;
+    margin: 0px 25% 5px 25%;
     padding: 5px 15px 5px 15px;
     font-size: 24px;
     border-radius: 3px;
@@ -68,4 +68,12 @@ body{
     margin: 10px 10px 10px 0px;
     padding: 0px 0px 0px 0px;
     /*float: left;*/
+}
+
+.flex-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    height: 138px;
+    width: 50%;
 }
