--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,15 @@ body{
     padding: 5px 15px 5px 15px;
     font-size: 24px;
     border-radius: 3px;
+    float: right;
+}
+
+.text-box img{
+    width: 100px;
+    height: 100px;
+    margin: 10px 10px 10px 0px;
+    padding: 0px 0px 0px 0px;
+    float: left;
 }
 
 .alt-text-box{
@@ -60,14 +69,15 @@ body{
     padding: 5px 5px 5px 5px;
     font-size: 24px;
     border-radius: 3px;
+    float: right;
 }
 
-.text-box img{
+.alt-text-box img{
     width: 100px;
     height: 100px;
     margin: 10px 10px 10px 0px;
     padding: 0px 0px 0px 0px;
-    /*float: left;*/
+    float: left;
 }
 
 .flex-container{
