--- a/styles.css
+++ b/styles.css
@@ -43,13 +43,15 @@ body{
     background-color: black;
     font-family: DEP;
     color: var(--green1);
-    margin: 2.5px 25% 2.5px 25%;
+    margin: 2.5px 33% 2.5px 33%;
     padding: 5px 15px 5px 15px;
     font-size: 24px;
     border-radius: 3px;
     float: right;
     word-wrap: break-word;
     letter-spacing: 1px;
+    transform: translate(33%, 0%);
+    min-width: 587px;
 }
 
 .text-box img{
@@ -94,7 +96,9 @@ body{
 
 @media only screen and (max-width: 647px) {
   .text-box{
-    margin: 2.5px 1% 2.5px 1%;
+    margin: 2.5px 1px 2.5px 1px;
+    transform: translate(0%, 0%);
+    min-width:0px;
   }
   .flex-container{
     width: 98%;
