--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body{
     font-family: DEP;
     color: var(--green1);
     margin: 0 auto;
+    margin-top: 2.5px;
+    margin-bottom: 2.5px;
     padding: 5px 15px 5px 15px;
     font-size: 24px;
     border-radius: 3px;
@@ -93,7 +95,6 @@ body{
 
 @media only screen and (max-width: 647px) {
   .text-box{
-    margin: 2.5px 1px 2.5px 1px;
     transform: translate(0%, 0%);
     min-width:0px;
   }
