--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 /*change this later to be more accurate but it'll do for now*/
 @font-face {
     font-family: DEP;
-    src: local("DEP.ttf") format("truetype");
+    /*src: local("DEP.ttf") format("truetype");*/
     src: url(https://codehs.com/uploads/98892640bda8f3fe5654e3c6d20d5c8c) format("truetype");
 }
 
