--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,13 @@ body{
     font-size: 38px;
 }
 
+.gradient{
+    background: linear-gradient(
+            to right, var(--green1), #000, #000);
+        -webkit-text-fill-color: transparent;
+        -webkit-background-clip: text;
+}
+
 @media only screen and (max-width: 647px) {
   .text-box{
     transform: translate(0%, 0%);
