--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,12 @@
 }
 
 /*change this later to be more accurate but it'll do for now*/
+/*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: url(https://codehs.com/uploads/98892640bda8f3fe5654e3c6d20d5c8c)format("truetype");
-    /*why the fuck does the local one not work WTF*/
-    src: local("DEP.ttf") format("truetype");
+    src: local("fonts/DEP.ttf") format("truetype");
+    /*src: url(https://codehs.com/uploads/98892640bda8f3fe5654e3c6d20d5c8c)format("truetype");*/
+    /*]why the fuck does the local one not work WTF*/
 }
 
 
@@ -20,7 +21,6 @@
 --green2: #86c06c;
 --green3: #306850;
 --green4: #071821;
-background-color: var(--green2);
 }
 
 /*
@@ -36,6 +36,8 @@ body{
     font-size: 20px;
     color: var(--green1);
     line-height: 27px;
+    background-image: url("background_yoki.png");
+    background-repeat: repeat;
 }
 
 .text-box{
