--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,11 @@
 /*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: local("fonts/DEP.ttf") format("truetype");
+    src: local("fonts/DEP/DEP.ttf") format("truetype");
+    src: local("fonts/DEP/DEP.woff") format("woff");
+    src: local("fonts/DEP/DEP.otf") format("opentype");
     /*src: url(https://codehs.com/uploads/98892640bda8f3fe5654e3c6d20d5c8c)format("truetype");*/
-    /*]why the fuck does the local one not work WTF*/
+    /*why the fuck does the local one not work WTF*/
 }
 
 
