--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ body{
     word-wrap: break-word;
     letter-spacing: 1px;
     min-width: 587px;
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+    user-select: none;
 }
 
 .text-box img{
@@ -66,6 +71,11 @@ body{
     margin: 0px 15px 5px 0px;
     padding: 0px 0px 0px 0px;
     float: left;
+   -moz-user-select: -moz-none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   -ms-user-select: none;
+    user-select: none;
 }
 
 .alt-text-box{
@@ -125,7 +135,8 @@ audio{
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
-
+   -ms-user-select: none;
+    user-select: none;
    /*
      Introduced in IE 10.
      See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
