--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,8 @@ body{
     line-height: 27px;
     background-image: url("background_yoki.png");
     background-repeat: repeat;
+    background-size: 100% 100%;
+    background-attachment: fixed;
 }
 
 .text-box{
@@ -58,6 +60,7 @@ body{
     word-wrap: break-word;
     letter-spacing: 1px;
     min-width: 587px;
+    position: relative;
 }
 
 .text-box img{
