--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body{
     background-image: url("background_yoki.png");
     background-repeat: repeat;
     background-size: 100% 100%;
-    background-attachment: fixed;
+    background-attachment: relative;
 }
 
 .text-box{
