made the bg bigger

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body{
     font-size: 20px;
     color: var(--green1);
     line-height: 27px;
-    background-image: url("background_yoki.png");
+    background-image: url("background_yoki_2.png");
     background-repeat: repeat;
     background-attachment: fixed;
 }
