tried adding parallax (epic fail)

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,14 @@ body{
     background-image: url("background_yoki_2.png");
     background-repeat: repeat;
     background-attachment: fixed;
+    z-index: -1;
+}
+
+#bg{
+    background-image: url("images/charles/Sweat_Drop.png");
+    background-repeat: repeat;
+    background-attachment: fixed;
+    z-index: 1;
 }
 
 .text-box{
