--- a/styles.css
+++ b/styles.css
@@ -141,7 +141,7 @@ audio{
 }
 
 #bg{
-    background-image: url("images/charles/Sweat_Drop.png");
+    background-image: url("background_yoki_2.png");
     background-repeat: repeat;
     background-attachment: fixed;
     background-position: center center;
