--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,8 @@ audio{
     position: fixed;
     width: 100vw;
     height: 100%;
+    padding-top: 600%;
+    padding-bottom: 600%;
 }
 
 *.unselectable{
