--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ audio{
     background-size: auto;
     position: fixed;
     width: 100vw;
-    height: 100%;
+    height: 100vw;
     padding-top: 100%;
     padding-bottom: 100%;
 }
