--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ body{
     line-height: 27px;
     z-index: -10;
     overscroll-behavior: none;
-    /*background-image: url("images/bg/background_yoki_2.png");
+    /*background-image: url("../images/bg/background_yoki_2.png");
     background-repeat: repeat;
     background-size: auto;*/
 }
@@ -142,7 +142,7 @@ audio{
 }
 
 #bg{
-    background-image: url("images/bg/background_yoki_2.png");
+    background-image: url("../images/bg/background_yoki_2.png");
     background-repeat: repeat;
     background-size: auto;
     z-index: -1;
