--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,14 @@
 /*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: url("../fonts/DEP/DEP.ttf") format("truetype"),
-         url("../fonts/DEP/DEP.woff") format("woff"),
-         url("../fonts/DEP/DEP.woff2") format("woff2"),
-         url("../fonts/DEP/DEP.otf") format("opentype"),
-         url(https://codehs.com/uploads/7293cfb70c54a6ca002d938f6d8cdd6c)format("truetype"),
-         url(https://codehs.com/uploads/68e97f9c621ca0041453219e646366d5)format("woff"),
-         url(https://codehs.com/uploads/9f9510a768ee488a402ec028a17ff25b)format("woff2"),
-         url(https://codehs.com/uploads/2c77305abc98619c56b73cb4fd1f28e6)format("opentype");
+    src: url("fonts/DEP/DEP.ttf") format("truetype"),
+         url("fonts/DEP/DEP.woff") format("woff"),
+         url("fonts/DEP/DEP.woff2") format("woff2"),
+         url("fonts/DEP/DEP.otf") format("opentype"),
+         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.ttf)format("truetype"),
+         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff)format("woff"),
+         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff2)format("woff2"),
+         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.otf)format("opentype");
 }
 
 
