--- a/css/styles.css
+++ b/css/styles.css
@@ -246,6 +246,10 @@ audio{
     z-index: -1;
     width: 100%;
     height: 100%;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
 }
 
 *.unselectable{
