--- a/css/styles.css
+++ b/css/styles.css
@@ -36,12 +36,13 @@ var(--green3)
 var(--green4)
 */
 
-html, body, .bg{
+html{
    width: 100%;
    height: 100%;
 }
 
 body{
+    height: auto;
     background-color: var(--green3);
     font-family: DEP;
     font-size: 20px;
@@ -250,7 +251,7 @@ audio{
     background-position: fixed;
     z-index: -1;
     width: 100%;
-    height: 100%;
+    height: auto;
     image-rendering: -webkit-optimize-contrast;
     image-rendering: crisp-edges;
     image-rendering: pixelated;
