--- a/css/styles.css
+++ b/css/styles.css
@@ -36,13 +36,12 @@ var(--green3)
 var(--green4)
 */
 
-html{
+html, body{
    width: 100%;
    height: 100%;
 }
 
 body{
-    height: auto;
     background-color: var(--green3);
     font-family: DEP;
     font-size: 20px;
