--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ var(--green3)
 var(--green4)
 */
 
-html{
+html, body{
    width: 100%;
    height: 100%;
 }
@@ -246,7 +246,8 @@ audio{
     background-size: auto;
     background-position: fixed;
     z-index: -1;
-    width: 100%;
+    min-width: 100%;
+    width: auto;
     min-height: 100%;
     height: auto;
     image-rendering: -webkit-optimize-contrast;
