--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
     src: url("../fonts/DEP/DEP.ttf") format("truetype"),
          url("../fonts/DEP/DEP.woff") format("woff"),
          url("../fonts/DEP/DEP.woff2") format("woff2"),
-         url("../fonts/DEP/DEP.otf") format("opentype"),
+         url("../fonts/DEP/DEP.otf") format("opentype");
 }
 
 
