--- a/css/styles.css
+++ b/css/styles.css
@@ -68,7 +68,7 @@ body{
     padding: 15px 15px 7.5px 15px;
     font-size: 19px;
     word-wrap: break-word;
-    letter-spacing: 3px;
+    letter-spacing: 1/*3*/px;
     min-width: 600px;
     z-index: 5;
 }
@@ -250,8 +250,8 @@ audio{
     background-size: auto;
     background-position: fixed;
     z-index: -1;
-    /*min-width: 100%;
-    width: auto;*/
+    min-width: 100%;
+    width: auto;
     min-height: 100%;
     height: auto;
     image-rendering: -webkit-optimize-contrast;
