--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,7 @@
 /*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: url("/fonts/DEP/DEP.ttf"),
-         url("/fonts/DEP/DEP.woff"),
-         url("/fonts/DEP/DEP.woff2"),
-         url("/fonts/DEP/DEP.otf");
+    src: url("/fonts/DEP/DEP.ttf");
          
          /*url("../fonts/DEP/DEP.ttf") format("truetype"),
          url("../fonts/DEP/DEP.woff") format("woff"),
