--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 /*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: url("/fonts/DEP/DEP.ttf");
+    src: url("/spiritaxolotl.github.io/fonts/DEP/DEP.ttf");
          
          /*url("../fonts/DEP/DEP.ttf") format("truetype"),
          url("../fonts/DEP/DEP.woff") format("woff"),
