--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,10 @@
 /*haha it's changed to be more accurate now gj me*/
 @font-face {
     font-family: DEP;
-    src: /*url("../fonts/DEP/DEP.ttf") format("truetype"),
+    src: url("../fonts/DEP/DEP.ttf") format("truetype"),
          url("../fonts/DEP/DEP.woff") format("woff"),
          url("../fonts/DEP/DEP.woff2") format("woff2"),
-         url("../fonts/DEP/DEP.otf") format("opentype"),*/
+         url("../fonts/DEP/DEP.otf") format("opentype"),
          url(https://spiritaxolotl.github.io/fonts/DEP/DEP.ttf)format("truetype"),
          url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff)format("woff"),
          url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff2)format("woff2"),
@@ -250,8 +250,8 @@ audio{
     background-size: auto;
     background-position: fixed;
     z-index: -1;
-    min-width: 100%;
-    width: auto;
+    /*min-width: 100%;/*
+    width: 100px/*auto*/;
     min-height: 100%;
     height: auto;
     image-rendering: -webkit-optimize-contrast;
