--- a/css/styles.css
+++ b/css/styles.css
@@ -250,8 +250,8 @@ audio{
     background-size: auto;
     background-position: fixed;
     z-index: -1;
-    /*min-width: 100%;/*
-    width: 100px/*auto*/;
+    min-width: 100%;
+    width: auto;
     min-height: 100%;
     height: auto;
     image-rendering: -webkit-optimize-contrast;
