--- a/css/styles.css
+++ b/css/styles.css
@@ -260,8 +260,8 @@ audio{
     -ms-interpolation-mode: nearest-neighbor;
 }
 
-*.unselectable{
-   -moz-user-select: -moz-none;
+.unselectable{
+   -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
