--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ var(--green3)
 var(--green4)
 */
 
-html, body{
+html{
    width: 100%;
    height: 100%;
 }
@@ -260,7 +260,7 @@ audio{
     -ms-interpolation-mode: nearest-neighbor;
 }
 
-*.unselectable{
+.unselectable{
    -moz-user-select: -moz-none;
    -khtml-user-select: none;
    -webkit-user-select: none;
