--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,7 @@ audio{
 }
 
 .unselectable{
-   -moz-user-select: -moz-none;
+   -moz-user-select: none;
    -khtml-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
