--- a/css/styles.css
+++ b/css/styles.css
@@ -45,8 +45,8 @@ body{
     background-color: var(--green3);
     font-family: DEP;
     font-size: 20px;
+    line-height: 21px;
     color: var(--green1);
-    line-height: 27px;
     z-index: -10;
     overscroll-behavior: none;
     /*background-image: url("../images/bg/background_yoki_2.png");
@@ -55,42 +55,40 @@ body{
 }
 
 .text-box{
-    border-width: 4px;
+    border-width: 3px;
     border-style: solid;
     border-color: var(--green1);
-    border-radius: 3px;
+    border-radius: 0px; /*normally 4px*/
     background-color: black;
     font-family: DEP;
     color: var(--green1);
     margin: 0 auto;
-    margin-top: 2.5px;
-    margin-bottom: 2.5px;
-    padding: 15px 15px 7.5px 15px;
-    font-size: 19px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 18.5px 15px 15px 15px;
+    font-size: 21px;
     word-wrap: break-word;
-    letter-spacing: 3px;
+    letter-spacing: 3.9px;
     min-width: 600px;
     z-index: 5;
 }
 
 .text-box img{
-    width: 100px;
-    height: 100px;
-    margin: 0px 15px 5px 0px;
+    width: 97px;
+    height: 97px;
+    margin: -3.5px 20px 0px 0px;
     padding: 0px 0px 0px 0px;
     float: left;
     pointer-events: none;
     user-select: none;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: crisp-edges;
-    image-rendering: pixelated;
+    image-rendering: -webkit-optimize-contrast, crisp-edges, pixelated;
     -ms-interpolation-mode: nearest-neighbor;
 }
 
 .fart-text-box img{
     width: 100%;
     /*height: 100px;*/
-    margin: 0px 15px 10px 0px;
+    margin: 0px 17.5px 7.5px 0px;
     padding: 0px 0px 0px 0px;
     /*float: left;*/
     /*pointer-events: none;
