--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,9 @@ body{
     font-size: 21px;
     word-wrap: break-word;
     letter-spacing: 4.5px;
-    min-width: 600px;
+    min-width : 600px;
+    max-width: 600px;
+    width : auto;
     z-index: 5;
 }
 
@@ -314,5 +316,3 @@ a{
 #date{
     float: right;
 }
-
-
