Text box to the MAX

--- a/css/styles.css
+++ b/css/styles.css
@@ -69,9 +69,7 @@ body{
     font-size: 21px;
     word-wrap: break-word;
     letter-spacing: 4.5px;
-    min-width : 600px;
     max-width: 600px;
-    width : auto;
     z-index: 5;
 }
 
@@ -112,7 +110,7 @@ body{
     font-size: 19px;
     word-wrap: break-word;
     letter-spacing: 1px;
-    min-width: 600px;
+    max-width: 600px;
     z-index: 5;
     text-decoration: underline;
 }
@@ -152,7 +150,7 @@ body{
     font-size: 25px;
     word-wrap: break-word;
     letter-spacing: 1px;
-    min-width: 600px;
+    max-width: 600px;
     z-index: 5;
 }
 
