Added `pixelated` class

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,6 +271,11 @@ audio{
     user-select: none;
 }
 
+.pixelated{
+    image-rendering: -webkit-optimize-contrast, pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+}
+
 @media only screen and (max-width: 600px) {
   .text-box, .desc-text-box, .title-text-box{
     transform: translate(0%, 0%);
