--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ audio{
     user-select: none;
 }
 
-.pixelated{
+.pixelated img{
     image-rendering : -webkit-optimize-contrast;
     image-rendering : crisp-edges;
     image-rendering : pixelated;
