Maybe by calling it last

--- a/css/styles.css
+++ b/css/styles.css
@@ -271,13 +271,6 @@ audio{
     user-select: none;
 }
 
-img .pixelated{
-    image-rendering : -webkit-optimize-contrast;
-    image-rendering : crisp-edges;
-    image-rendering : pixelated;
-    -ms-interpolation-mode : nearest-neighbor;
-}
-
 @media only screen and (max-width: 600px) {
   .text-box, .desc-text-box, .title-text-box{
     transform: translate(0%, 0%);
@@ -325,4 +318,11 @@ a{
   }
 #date{
     float: right;
+}
+
+.pixelated{
+    image-rendering : -webkit-optimize-contrast;
+    image-rendering : crisp-edges;
+    image-rendering : pixelated;
+    -ms-interpolation-mode : nearest-neighbor;
 }
