Funny Arrow Animation for Text Boxes
Hi, Ari Here.

Explanation: (Which you may or may not need)

- I made a new class <.arrow>. I set its position: absolute so I could use "top" and "left" in tandem with "transform" to center the arrow at the bottom of the text box. However...

- The "text-box" class (the parent of (.arrow)) needed to have its position set otherwise the <.arrow> class would've fixed itself to the parent that DID have it's position set. In this case it was #bg.

- In the <.arrow> class, I got rid of the margin as the "next_arrow" image didn't need it.

(I saw that the margin was for spacing the face image from the text.)

Sidenotes:
- You should be able to copy and paste the arrow in the text boxes where you want it.

- I only tested this on a desktop setting. I have no idea if it works on other devices.

- I hope y'all are fine with css animations. Idk if you have plans for js or other types of animation.

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,8 @@ body{
 }
 
 .text-box{
+    position: relative; /*  Needed to set this otherwise the arrow would go to the bottom of the bg id  */
+
     border-width: 3px;
     border-style: solid;
     border-color: var(--green1);
@@ -86,6 +88,38 @@ body{
     -ms-interpolation-mode: nearest-neighbor;
 }
 
+
+.text-box .arrow {
+    position: absolute; /* Needed to center the arrow image in the first place */
+    margin:0; /* Needed so the arrow image centers properly without being offset by the margin */
+
+    /* Tweak this if you can or want to. The current settings don't look right atm.  */
+    width: 12px;
+    height: 12px;
+
+    top: 89.5%; /* Use this to tweak the height of the arrow from the bottom of the text box */
+    left: 50%; /* DONT TOUCHA THE CHILD */
+    transform: translateX(-50%) translateY(-50%); /* YOU A TOUCHA THE CHILD?! */
+
+    animation: arrowGlide 1s; /* setting the speed of the animation */
+    animation-iteration-count: infinite; /* infinity */
+}
+
+/* Animation for arrow stuff */
+@keyframes arrowGlide {
+    0% {
+        transform: translateY(-1px);
+    }
+
+    50% {
+        transform: translateY(1px);
+    }
+
+    100% {
+        transform: translateY(-1px);
+    }
+}
+
 .fart-text-box img{
     width: 100%;
     /*height: 100px;*/
@@ -97,6 +131,8 @@ body{
     /*pointer-events: none;
     user-select: none;*/
 }
+
+
 
 .desc-text-box{
     border-width: 4px;
@@ -158,6 +194,7 @@ body{
     max-width: 600px;
     z-index: 5;
 }
+
 
 .flex-container{
     display: flex;
