--- a/css/styles.css
+++ b/css/styles.css
@@ -36,9 +36,10 @@ var(--green3)
 var(--green4)
 */
 
-html{
-   width: 100%;
-   height: 100%;
+body, html{
+   width:100%;
+  height:100%;
+  overflow:hidden;
 }
 
 body{
@@ -48,7 +49,6 @@ body{
     line-height: 21px;
     color: var(--green1);
     z-index: -10;
-    height: 100%;
     /*overscroll-behavior: none;*/
     /*background-image: url("../images/bg/background_yoki_2.png");
     background-repeat: repeat;
