--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,8 @@ var(--green4)
 */
 
 body, html{
-   width:100%;
+    width:100%;
+    height:100%;
 }
 
 body{
@@ -87,7 +88,7 @@ pre {
     z-index: 5;
 }
 
-.text-box img{
+.text-box img {
     width: 97px;
     height: 97px;
     margin: -3.5px 20px 0px 0px;
@@ -339,7 +340,7 @@ audio{
 }
 
 @media only screen and (max-width: 1000px) {
-  .long-flex-container{
+  .long-flex-container {
     width: 100%;
     min-width: 0px;
   }
