--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,21 @@
 /*.text-box{
-    font-size:20px;
+  font-size:20px;
 }*/
 
-#ominous-countdown{
-    background-color: #000000;
-}
-
-/*change this later to be more accurate but it'll do for now*/
-/*haha it's changed to be more accurate now gj me*/
+/* change this later to be more accurate but it'll do for now */
+/* haha it's changed to be more accurate now gj me */
 @font-face {
-    font-family: DEP;
-    src: url("../fonts/DEP/DEP.ttf") format("truetype"),
-         url("../fonts/DEP/DEP.woff") format("woff"),
-         url("../fonts/DEP/DEP.woff2") format("woff2"),
-         url("../fonts/DEP/DEP.otf") format("opentype"),
-         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.ttf)format("truetype"),
-         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff)format("woff"),
-         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff2)format("woff2"),
-         url(https://spiritaxolotl.github.io/fonts/DEP/DEP.otf)format("opentype");
+  font-family: DEP;
+  src:
+    url("../fonts/DEP/DEP.ttf") format("truetype"),
+    url("../fonts/DEP/DEP.woff") format("woff"),
+    url("../fonts/DEP/DEP.woff2") format("woff2"),
+    url("../fonts/DEP/DEP.otf") format("opentype"),
+    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.ttf)format("truetype"),
+    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff)format("woff"),
+    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.woff2)format("woff2"),
+    url(https://spiritaxolotl.github.io/fonts/DEP/DEP.otf)format("opentype")
+  ;
 }
 
 
@@ -30,6 +28,7 @@
 }
 
 /*
+Quick reference:
 var(--green1)
 var(--green2)
 var(--green3)
@@ -37,296 +36,296 @@ var(--green4)
 */
 
 body, html{
-    width:100%;
-    height:100%;
+  width:100%;
+  height:100%;
 }
 
 body{
-    background-color: var(--green3);
-    font-family: DEP;
-    font-size: 20px;
-    line-height: 21px;
-    color: var(--green1);
-    z-index: -10;
-    /*overscroll-behavior: none;*/
-    /*background-image: url("../images/bg/background_yoki_2.png");
-    background-repeat: repeat;
-    background-size: auto;*/
+  background-color: var(--green3);
+  font-family: DEP;
+  font-size: 20px;
+  line-height: 21px;
+  color: var(--green1);
+  z-index: -10;
+  /*overscroll-behavior: none;*/
+  /*background-image: url("../images/bg/background_yoki_2.png");
+  background-repeat: repeat;
+  background-size: auto;*/
 }
 
 pre { 
-    /* Sort of fixes issue #40. 
-    Thing is, this causes overflow to occur in 
-    textboxes with more than 1 space, 
-    and the horizontal scrollbar is shown. */
+  /* Sort of fixes issue #40. 
+  Thing is, this causes overflow to occur in 
+  textboxes with more than 1 space, 
+  and the horizontal scrollbar is shown. */
 
-    /* This also overwrites font-size in bootstrap.min.css:6 */
-    font-family: DEP;
-    font-size: 21px; /* Same as textbox's width*/
-    line-height: 21px;
+  /* This also overwrites font-size in bootstrap.min.css:6 */
+  font-family: DEP;
+  font-size: 21px; /* Same as textbox's width*/
+  line-height: 21px;
 }
 
 .text-box{
-    position: relative; /*  Needed to set this otherwise the arrow would go to the bottom of the bg id  */
+  position: relative; /* Needed to set this otherwise the arrow would go to the bottom of the bg id */
 
-    border-width: 3px;
-    border-style: solid;
-    border-color: var(--green1);
-    border-radius: 0px; /*normally 4px*/
-    background-color: black;
-    font-family: DEP;
-    color: var(--green1);
-    margin: 0 auto;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    padding: 18.5px 10px 15px 15px;
-    font-size: 21px;
-    word-wrap: break-word;
-    letter-spacing: 4.5px;
-    min-width: 600px;
-    max-width: 600px;
-    z-index: 5;
+  border-width: 3px;
+  border-style: solid;
+  border-color: var(--green1);
+  border-radius: 0px; /*normally 4px*/
+  background-color: black;
+  font-family: DEP;
+  color: var(--green1);
+  margin: 0 auto;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 18.5px 10px 15px 15px;
+  font-size: 21px;
+  word-wrap: break-word;
+  letter-spacing: 4.5px;
+  min-width: 600px;
+  max-width: 600px;
+  z-index: 5;
 }
 
 .text-box img {
-    width: 97px;
-    height: 97px;
-    margin: -3.5px 20px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    float: left;
-    pointer-events: none;
-    user-select: none;
-    image-rendering : -webkit-optimize-contrast;
-    image-rendering : crisp-edges;
-    image-rendering : pixelated;
-    -ms-interpolation-mode : nearest-neighbor;
-    -ms-interpolation-mode: nearest-neighbor;
+  width: 97px;
+  height: 97px;
+  margin: -3.5px 20px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  float: left;
+  pointer-events: none;
+  user-select: none;
+  image-rendering : -webkit-optimize-contrast;
+  image-rendering : crisp-edges;
+  image-rendering : pixelated;
+  -ms-interpolation-mode : nearest-neighbor;
+  -ms-interpolation-mode: nearest-neighbor;
 }
 
 
 .text-box .arrow {
-    position: absolute; /* Needed to center the arrow image in the first place */
-    margin:0; /* Needed so the arrow image centers properly without being offset by the margin */
+  position: absolute; /* Needed to center the arrow image in the first place */
+  margin:0; /* Needed so the arrow image centers properly without being offset by the margin */
 
-    /* Tweak this if you can or want to. The current settings don't look right atm.  */
-    width: 10px;
-    height: 8px;
+  /* Tweak this if you can or want to. The current settings don't look right atm.  */
+  width: 12px;
+  height: 12px;
 
-    bottom: 2px; /* Use this to tweak the height of the arrow from the bottom of the text box */
-    left: 50%; /* DONT TOUCHA THE CHILD */
-    transform: translateX(-50%) translateY(-50%); /* YOU A TOUCHA THE CHILD?! */
+  top: 89.5%; /* Use this to tweak the height of the arrow from the bottom of the text box */
+  left: 50%; /* DONT TOUCHA THE CHILD */
+  transform: translateX(-50%) translateY(-50%); /* YOU A TOUCHA THE CHILD?! */
 
-    animation: arrowGlide 1s steps(2) infinite; /* setting the speed of the animation */
+  animation: arrowGlide 1s; /* setting the speed of the animation */
+  animation-iteration-count: infinite; /* infinity */
 }
 
 /* Animation for arrow stuff */
 @keyframes arrowGlide {
-    0% {
-        transform: translateY(-1px);
-    }
+  0% {
+    transform: translateY(-1px);
+  }
 
-    50% {
-        transform: translateY(1px);
-    }
+  50% {
+    transform: translateY(1px);
+  }
 
-    100% {
-        transform: translateY(-1px);
-    }
+  100% {
+    transform: translateY(-1px);
+  }
 }
 
 .fart-text-box img{
-    width: 100%;
-    /*height: 100px;*/
-    margin: 0px 17.5px 7.5px 0px;
-    padding: 0px 0px 0px 0px;
-    image-rendering: auto;
-    -ms-interpolation-mode: bilinear;
-    /*float: left;*/
-    /*pointer-events: none;
-    user-select: none;*/
+  width: 100%;
+  /*height: 100px;*/
+  margin: 0px 17.5px 7.5px 0px;
+  padding: 0px 0px 0px 0px;
+  image-rendering: auto;
+  -ms-interpolation-mode: bilinear;
+  /*float: left;*/
+  /*pointer-events: none;
+  user-select: none;*/
 }
 
 
 
 .desc-text-box{
-    border-width: 4px;
-    border-style: solid;
-    border-color: var(--green1);
-    border-radius: 3px;
-    background-color: black;
-    font-family: DEP;
-    color: var(--green1);
-    margin: 0 auto;
-    margin-top: 2.5px;
-    margin-bottom: 2.5px;
-    padding: 15px 15px 7.5px 15px;
-    font-size: 19px;
-    word-wrap: break-word;
-    letter-spacing: 1px;
-    min-width: 600px;
-    max-width: 600px;
-    z-index: 5;
-    text-decoration: underline;
+  border-width: 4px;
+  border-style: solid;
+  border-color: var(--green1);
+  border-radius: 3px;
+  background-color: black;
+  font-family: DEP;
+  color: var(--green1);
+  margin: 0 auto;
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
+  padding: 15px 15px 7.5px 15px;
+  font-size: 19px;
+  word-wrap: break-word;
+  letter-spacing: 1px;
+  min-width: 600px;
+  max-width: 600px;
+  z-index: 5;
+  text-decoration: underline;
 }
 
 .fart-text-box{
-    border-width: 4px;
-    border-style: solid;
-    border-color: var(--green1);
-    border-radius: 3px;
-    background-color: black;
-    font-family: DEP;
-    color: var(--green1);
-    margin: 0 auto;
-    margin-top: 15px;
-    margin-bottom: 15px;
-    padding: 15px 15px 7.5px 15px;
-    font-size: 19px;
-    word-wrap: break-word;
-    letter-spacing: 1px;
-    min-width: 400px;
-    max-width: 400px;
-    z-index: 5;
+  border-width: 4px;
+  border-style: solid;
+  border-color: var(--green1);
+  border-radius: 3px;
+  background-color: black;
+  font-family: DEP;
+  color: var(--green1);
+  margin: 0 auto;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  padding: 15px 15px 7.5px 15px;
+  font-size: 19px;
+  word-wrap: break-word;
+  letter-spacing: 1px;
+  min-width: 400px;
+  max-width: 400px;
+  z-index: 5;
 }
 
 .title-text-box{
-    border-width: 4px;
-    border-style: solid;
-    border-color: var(--green1);
-    border-radius: 3px;
-    background-color: black;
-    font-family: DEP;
-    color: var(--green1);
-    margin: 0 auto;
-    margin-top: 2.5px;
-    margin-bottom: 2.5px;
-    padding: 15px 15px 7.5px 15px;
-    font-size: 25px;
-    word-wrap: break-word;
-    letter-spacing: 1px;
-    min-width: 600px;
-    max-width: 600px;
-    z-index: 5;
+  border-width: 4px;
+  border-style: solid;
+  border-color: var(--green1);
+  border-radius: 3px;
+  background-color: black;
+  font-family: DEP;
+  color: var(--green1);
+  margin: 0 auto;
+  margin-top: 2.5px;
+  margin-bottom: 2.5px;
+  padding: 15px 15px 7.5px 15px;
+  font-size: 25px;
+  word-wrap: break-word;
+  letter-spacing: 1px;
+  min-width: 600px;
+  max-width: 600px;
+  z-index: 5;
 }
 
 
 .flex-container{
-   /* | Fixes issue #13 */ 
-    /* display: flex; */
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 133px;
-    width: 50%;
+  /* Fixes issue #13 */ 
+  /* display: flex; */
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-height: 133px;
+  width: 50%;
 }
 
 .desc-flex-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 40px;
-    width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-height: 40px;
+  width: 50%;
 }
 
 .fart-flex-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /*
-    min-height: 40px;
-    */
-    width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* min-height: 40px; */
+  width: 50%;
 }
 
 .title-flex-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 40px;
-    width: 50%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-height: 40px;
+  width: 50%;
 }
 
 .long-flex-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    min-height: 138px;
-    width: 60%;
-    min-width: 950px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-height: 138px;
+  width: 60%;
+  min-width: 950px;
 }
 
 div .small{
-    font-size: 8px;
+  font-size: 8px;
 }
 div .large{
-    font-size: 25px;
+  font-size: 25px;
 }
 
 div .larger{
-    font-size: 38px;
+  font-size: 38px;
 }
 
 .dnd-gray{
-    color:#737e8c;
+  color:#737e8c;
 }
 
 .dnd-green{
-    color:#3ba55d;
+  color:#3ba55d;
 }
 
 .dnd-red{
-    color:#ed4245;
+  color:#ed4245;
 }
 
 .dnd-yellow{
-    color:#faa81a;
+  color:#faa81a;
 }
 
 iframe{
-    margin: 0 auto;
-    display: block;
+  margin: 0 auto;
+  display: block;
 }
 
 .gradient{
-    background: linear-gradient(
-            to right, var(--green1), #000, #000);
-        -webkit-text-fill-color: transparent;
-        background-clip: text;
-        -webkit-background-clip: text;
+  background: linear-gradient(
+    to right, var(--green1), #000, #000
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
 }
 
 audio{
-    display: none;
+  display: none;
 }
 
 #bg{
-    position: absolute;
-    background-image: url("../images/bg/background_yoki_2.png");
-    background-repeat: repeat;
-    background-size: auto;
-    z-index: -1;
-    min-width: 100%;
-    width: auto;
-    min-height: 100%;
-    height: auto;
-    image-rendering: -webkit-optimize-contrast;
-    image-rendering: crisp-edges;
-    image-rendering: pixelated;
-    -ms-interpolation-mode: nearest-neighbor;
+  position: absolute;
+  background-image: url("../images/bg/background_yoki_2.png");
+  background-repeat: repeat;
+  background-size: auto;
+  z-index: -1;
+  min-width: 100%;
+  width: auto;
+  min-height: 100%;
+  height: auto;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: crisp-edges;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
 }
 
 .unselectable{
-   -moz-user-select: none;
-   -khtml-user-select: none;
-   -webkit-user-select: none;
-   -ms-user-select: none;
-    user-select: none;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 .pixelated{
-    image-rendering : -webkit-optimize-contrast;
-    image-rendering : crisp-edges;
-    image-rendering : pixelated;
-    -ms-interpolation-mode : nearest-neighbor;
+  image-rendering : -webkit-optimize-contrast;
+  image-rendering : crisp-edges;
+  image-rendering : pixelated;
+  -ms-interpolation-mode : nearest-neighbor;
 }
 
 @media only screen and (max-width: 600px) {
@@ -356,24 +355,24 @@ audio{
 }
 
 a{
-    text-decoration: underline;
+  text-decoration: underline;
 }
-  /* unvisited link */
-  a:link {
-      color: var(--green2);
-  }
-  /* visited link */
-  a:visited {
-      color: var(--green2);
-  }
-  /* mouse over link */
-  a:hover {
-      color: var(--green1);
-  }
-  /* selected link */
-  a:active {
-      color: var(--green3);
-  }
+/* unvisited link */
+a:link {
+  color: var(--green2);
+}
+/* visited link */
+a:visited {
+  color: var(--green2);
+}
+/* mouse over link */
+a:hover {
+  color: var(--green1);
+}
+/* selected link */
+a:active {
+  color: var(--green3);
+}
 #date{
-    float: right;
+  float: right;
 }
